landing page overflow fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,83 +8,11 @@ body {
   /* background-position: center center; */
 }
 
-.landing-screen-bg {
-  /* position: relative;
-  top: -30px; */
-  background-color: #0275d8;
-  height: 100vh;
-  width: 100vw;
-  background-image: url("/public/bgs/My\ project\ \(1\).jpg");
-  background-position-x: center;
-  /* background-size: cover; */
-  background-repeat: no-repeat;
-}
 
-.landing-screen-text-position1 {
-  position: absolute;
-  top: 150px;
-  left: 4px;
-  width: 260px;
-}
-
-.landing-screen-text-position2 {
-  position: absolute;
-  top: 420px;
-  left: 4px;
-  width: 260px;
-}
-
-.landing-screen-text-position3 {
-  position: absolute;
-  top: 300px;
-  right: -30px;
-  width: 280px;
-}
-
-.landing-screen-text-position4 {
-  position: absolute;
-  top: 300px;
-  left: 280px;
-  width: 240px;
-  background-color: #0275d8;
-  padding: 16px;
-}
-
-.landing-screen-heading {
-  font-size: 40px;
-  color: white;
-}
-
-.landing-screen-description {
-  padding: 4px;
-  color: white;
-}
-
-.landing-screen-link {
-  color: white;
-  text-decoration: none;
-  font-size: 20px;
-  margin: 12px;
-  margin-top: 50px;
-  padding: 4px;
-}
-
-.landing-screen-link:hover {
-  color: white;
-  cursor: pointer;
-  text-decoration: underline;
-}
 
 
 
 /*Login Form  */
-/* .login-screen-bg {
-  height: 100vh;
-  width: 100vw;
-  background-image: url("/public/bgs/himalaya.jpg");
-  background-position: center center;
-  background-size: cover;
-} */
 
 .LoginFormPosition {
   position: absolute;
@@ -95,7 +23,6 @@ body {
 .LoginForm {
   height: 55vh;
   width: 50vw;
-  /* border: 5px solid silver; */
   overflow-x: nowrap;
   background: #0275d8;
 }
